--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ VITE_APP_VERSION=v4.0.1
 GENERATE_SOURCEMAP=false
 
 ## PUBLIC URL
-VITE_APP_BASE_NAME=/management/
+#VITE_APP_BASE_NAME=/management/
+VITE_APP_BASE_NAME=/
