--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/inter": "5.1.0",
     "@fontsource/poppins": "5.1.0",
     "@fontsource/roboto": "5.1.0",
+    "@mui/base": "^5.0.0-alpha.125",
     "@mui/icons-material": "6.1.9",
     "@mui/material": "6.1.9",
     "@mui/x-charts": "^8.4.0",
