--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "3.46.0",
     "axios": "^1.10.0",
     "file-saver": "^2.0.5",
+    "flag-icon-css": "^4.1.7",
     "framer-motion": "11.12.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
