--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mui/icons-material": "6.1.9",
     "@mui/material": "6.1.9",
     "@mui/x-charts": "^8.4.0",
+    "@mui/x-date-pickers": "^8.6.0",
     "@tabler/icons-react": "3.31.0",
     "@vitejs/plugin-react": "4.3.4",
     "apexcharts": "3.46.0",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "flag-icon-css": "^4.1.7",
     "framer-motion": "11.12.0",
