--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "6.1.9",
     "@mui/x-charts": "^8.4.0",
     "@mui/x-date-pickers": "^8.6.0",
+    "@react-oauth/google": "^0.12.2",
     "@tabler/icons-react": "3.31.0",
     "@vitejs/plugin-react": "4.3.4",
     "apexcharts": "3.46.0",
