--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ GENERATE_SOURCEMAP=false
 ## PUBLIC URL
 #VITE_APP_BASE_NAME=/management/
 VITE_APP_BASE_NAME=/
+VITE_GOOGLE_CLIENT_ID=1070253532753-ung0pl9o98426n74mj6tp2spt15823hg.apps.googleusercontent.com
