--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ VITE_APP_VERSION=v4.0.1
 GENERATE_SOURCEMAP=false
 
 ## PUBLIC URL
-VITE_APP_BASE_NAME=/management/
-#VITE_APP_BASE_NAME=/
-VITE_GOOGLE_CLIENT_ID=1070253532753-ung0pl9o98426n74mj6tp2spt15823hg.apps.googleusercontent.com
+#VITE_APP_BASE_NAME=/management/
+VITE_APP_BASE_NAME=/
+#VITE_GOOGLE_CLIENT_ID=1070253532753-ung0pl9o98426n74mj6tp2spt15823hg.apps.googleusercontent.com
