--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ GENERATE_SOURCEMAP=false
 #VITE_APP_BASE_NAME=/management/
 VITE_APP_BASE_NAME=/
 #VITE_GOOGLE_CLIENT_ID=1070253532753-ung0pl9o98426n74mj6tp2spt15823hg.apps.googleusercontent.com
+
+VITE_APP_BASE_URL="http://payments.exotic-ads.com"
