Added All BaseURL

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ GENERATE_SOURCEMAP=false
 VITE_APP_BASE_NAME=/
 #VITE_GOOGLE_CLIENT_ID=1070253532753-ung0pl9o98426n74mj6tp2spt15823hg.apps.googleusercontent.com
 
-VITE_APP_BASE_URL="https://payments.exotic-ads.com"
+VITE_APP_BASE_URL="https://api.exoticnairobi.com"
 
 
