--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ VITE_APP_BASE_NAME=/
 #VITE_GOOGLE_CLIENT_ID=1070253532753-ung0pl9o98426n74mj6tp2spt15823hg.apps.googleusercontent.com
 
 #VITE_APP_BASE_URL="https://api.exoticnairobi.com"
-VITE_APP_BASE_URL="https://staging.exotickenya.com"
+VITE_APP_BASE_URL="https://testing.exotic-ads.com/api"
 
